Delete pages connection

--- a/package.json
+++ b/package.json
@@ -2,15 +2,12 @@
   "name": "metaverse-madness",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://denysskachko.github.io/Metaverse-Madness/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
